<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="681dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/welcome"
        android:paddingStart="10dp"
        android:textColor="#303030"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="639dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/welcome2"
        android:paddingLeft="0dp"
        android:textColor="#303030"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="394dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="206dp"
        android:background="@drawable/welcome"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/signin"
        android:layout_width="375dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="95dp"
        android:background="@drawable/buttonshape"
        android:drawableRight="@drawable/baseline_arrow_forward_24"
        android:drawingCacheQuality="auto"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="30dp"
        android:shadowColor="#979797"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="Login with Phone"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/cretae_my_acc"
        android:textColor="#505050"
        android:paddingLeft="9dp"
        android:textSize="14dp"
        tools:ignore="TextSizeCheck" />


</RelativeLayout>