<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="723dp"
        android:layout_height="751dp"
        android:layout_marginBottom="620dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997"
        app:srcCompat="@drawable/custom_shap"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="349dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="WELCOME"
        android:textColor="#FFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="432dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="20dp"
        android:text="@string/signup1"
        android:textColor="#303030"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.723"
        tools:ignore="RtlSymmetry"
        tools:layout_editor_absoluteX="-6dp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/poppins_medium"
        android:paddingLeft="20dp"
        android:text="@string/signup2"
        android:textColor="#303030"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="375dp"
        android:layout_height="65dp"
        android:background="@drawable/editext"
        android:drawableEnd="@drawable/baseline_close_24"
        android:elevation="10dp"
        android:ems="10"
        android:hint="Enter your phone number"
        android:inputType="textPassword|number"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="333dp"
        android:layout_height="59dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/signup3"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="18dp" />

    <Button
        android:id="@+id/signin"
        android:layout_width="375dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonshape"
        android:drawableRight="@drawable/baseline_arrow_forward_24"
        android:drawingCacheQuality="auto"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="30dp"
        android:shadowColor="#979797"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="Continue"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.217"
        tools:ignore="RtlCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>